--- a/vitrage_devstack/queens/README
+++ b/vitrage_devstack/queens/README
@@ -1,4 +1,5 @@
 
+== Install DevStack ==
 cd ~
 rm -rf devstack/
 git clone https://github.com/openstack-dev/devstack.git
@@ -8,9 +9,8 @@ sudo hostname compute-0-0
 nohup ./stack.sh &
 tail -f nohup
 
+== Env ==
 cd ~
-wget -O /etc/vitrage/zabbix_conf.yaml https://raw.githubusercontent.com/Idandos/somefiles/master/vitrage_devstack/zabbix_conf.yaml
-
 rm -rf keystonerc_admin
 wget https://raw.githubusercontent.com/Idandos/somefiles/master/vitrage_devstack/queens/keystonerc_admin
 source keystonerc_admin
@@ -19,21 +19,34 @@ source /home/stack/devstack/openrc
 echo "source keystonerc_admin" >> .bashrc
 echo "source /home/stack/devstack/openrc" >> .bashrc
 
+== Image ==
 wget https://raw.githubusercontent.com/Idandos/somefiles/master/vitrage_devstack/tinylinux.qcow2
 openstack image create TinyLinux --public --file /home/stack/tinylinux.qcow2
+== Network ==
 openstack network create NetA --share
 openstack subnet create subnetA --network NetA --subnet-range 8.8.8.0/24 --gateway 8.8.8.1
 
+== Heat Stack ==
 wget -O /home/stack/heat_stack.yaml https://raw.githubusercontent.com/Idandos/somefiles/master/vitrage_devstack/some_stack.yaml
 openstack stack create App_1 --template https://github.com/Idandos/somefiles/raw/master/vitrage_devstack/some_stack.yaml
 openstack stack create App_2 --template https://github.com/Idandos/somefiles/raw/master/vitrage_devstack/some_stack.yaml
 
+== Fix Heat ==
 sed -i.bak 's/stacks:global_index": "rule:deny_everybody/stacks:global_index": "/g' /etc/heat/policy.json
 
+== Install Zabbix ==
 wget https://raw.githubusercontent.com/Idandos/somefiles/master/vitrage_devstack/install_zabbix_on_devstack.sh
 chmod +x install_zabbix_on_devstack.sh
 sudo ./install_zabbix_on_devstack.sh
-
+wget -O /etc/vitrage/zabbix_conf.yaml https://raw.githubusercontent.com/Idandos/somefiles/master/vitrage_devstack/zabbix_conf.yaml
+* Now go to http://<IP>/zabbix and press next as needed
+* Login with Admin/zabbix
+* Configuration->Templates->Import Template -> use the zbx_template.xml
+* Configuration->Hosts
+      * Enable zabbix-server and rename to compute-0-0
+      * Add the mock-vitrage template
+      
+== Restart ==
 sudo service devstack@vitrage-graph restart
 sudo service apache2 restart
 
