--- a/vitrage_devstack/queens/README
+++ b/vitrage_devstack/queens/README
@@ -57,7 +57,7 @@ Manually config git according to git-setup.sh (in Idandos/somefiles/vitrage_devs
 wget https://download.jetbrains.com/python/pycharm-community-2017.3.3.tar.gz
 sudo chown stack:stack /opt
 tar xfz pycharm-community-*.tar.gz -C /opt/
-echo "alias pycharm='/opt/pycharm-community-2017.3.3/bin/pycharm.sh'" >> /home/stack/.bashrc
+echo "alias pycharm='nohup /opt/pycharm-community-2017.3.3/bin/pycharm.sh &'" >> /home/stack/.bashrc
 sudo apt-get update
 sudo apt-get install default-jre
 pycharm
